--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,11 @@
             "email": "chapabu101@gmail.com"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "Codeception\\": "src"
+        }
+    },
     "require": {
         "php": ">=5.4.0",
         "codeception/codeception": "2.*"
