--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -1,3 +1,5 @@
 class_name: AcceptanceTester
 modules:
-    enabled: [AcceptanceHelper]
+    enabled:
+        - PhpBrowser
+        - AcceptanceHelper
