--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
     "autoload": {
         "psr-4": {
             "Codeception\\": "src"
+        },
+        "psr-0": {
+            "Codeception": "src"
         }
     },
     "require": {
