Added test failure from _output to Travis output on failure

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,3 +30,4 @@ branches:
 after_failure:
   - cat tests/_output/drush.runserver.errors.txt
   - cat tests/_output/drush.runserver.output.txt
+  - cat tests/_output/BasicServerTestCept.fail.html
