Quoted options - just in case

--- a/codeception.yml
+++ b/codeception.yml
@@ -11,13 +11,13 @@ settings:
 modules:
     config:
         PhpBrowser:
-            url: http://127.0.0.1:8081/
+            url: 'http://127.0.0.1:8081'
 extensions:
     enabled:
         - Codeception\Extension\DrushRunserver
     config:
         Codeception\Extension\DrushRunserver:
-            drupalRoot: testsites/drupal7/drupal-7.x
-            drushBinary: vendor/bin/drush
-            hostname: 127.0.0.1
-            port: 8081
+            drupalRoot: 'testsites/drupal7/drupal-7.x'
+            drushBinary: 'vendor/bin/drush'
+            hostname: '127.0.0.1'
+            port: '8081'
