--- a/codeception.yml
+++ b/codeception.yml
@@ -11,7 +11,7 @@ settings:
 modules:
     config:
         PhpBrowser:
-            url: 'http://127.0.0.1:8081'
+            url: 'http://127.0.0.1:8081/'
 extensions:
     enabled:
         - Codeception\Extension\DrushRunserver
